--- a/interface/resources/html/dev-tools/css/log.css
+++ b/interface/resources/html/dev-tools/css/log.css
@@ -7,6 +7,10 @@ table {
   border-collapse: collapse; border-spacing: 0;
 }
 
+table.dataTable tbody td:nth-child(3) {
+    word-break: break-all;
+}
+
 td, th {  border: 0 none; height: 25px; }
 
 th {
@@ -25,12 +29,12 @@ td { background: #FAFAFA; text-align: left; word-wrap: break-word;}
 
 /* First-child blank cells! */
 tr td:first-child, tr th:first-child {
-	background: none;
-	font-style: italic;
-	font-size: 14px;
-	text-align: right;
-	padding-right: 10px;
-	width: 80px;
+    background: none;
+    font-style: italic;
+    font-size: 14px;
+    text-align: right;
+    padding-right: 10px;
+    width: 80px;
 }
 
 /* Add border-radius to inset cell*/
@@ -44,15 +48,13 @@ tr:first-child th:nth-child(3) {
 /* Search styling */
 
 input {
-	background:  #fff;
-	border: 0 none;
-	color: #7F7F7F;
-	float: right;
-	font: 16px 'Helvetica','Arial',sans-serif;
-	height: 20px;
-	margin: 6px;
-	transition: background 0.3s ease-in-out 0s;
-	width: 300px;
+    float: right;
+    color: #7F7F7F;
+    font: 16px 'Helvetica','Arial',sans-serif;
+    height: 20px;
+    margin: 0px 0px 10px 6px;
+    transition: background 0.3s ease-in-out 0s;
+    width: 300px;
 }
 
 label {
@@ -64,6 +66,7 @@ tr:first-child, th:last-child {
   border-radius: 0 5px 0 0;
 }
 
+/* Message type styling */
 tr td:nth-child(2) {
     color: white;
 }
