--- a/interface/resources/html/dev-tools/css/log.css
+++ b/interface/resources/html/dev-tools/css/log.css
@@ -1,92 +1,3 @@
-
-table {
-  color: #6c6c6c;
-  font-family: Helvetica, Arial, sans-serif;
-
-  /* Table reset  */
-  border-collapse: collapse; border-spacing: 0;
-}
-
-table.dataTable tbody td:nth-child(3) {
+table tbody td:nth-child(3) {
     word-break: break-all;
-}
-
-td, th {  border: 0 none; height: 25px; }
-
-th {
-  /* Table headers */
-	background: linear-gradient(#666 0%,#aaa 100%);
-	color: #FFF;
-	height: 40px;
-	text-align: left;
-}
-/* Zebra Stripe Rows */
-
-tr:nth-child(even) td { background: rgb(247, 247, 247); }
-tr:nth-child(odd) td { background: rgb(255, 255, 255); }
-
-td { background: #FAFAFA; text-align: left; word-wrap: break-word;}
-
-/* First-child blank cells! */
-tr td:first-child, tr th:first-child {
-    background: none;
-    font-style: italic;
-    font-size: 14px;
-    text-align: right;
-    padding-right: 10px;
-    width: 80px;
-}
-
-/* Add border-radius to inset cell*/
-tr:first-child th:nth-child(2) {
-   border-radius: 8px 0 0 0;
-}
-tr:first-child th:nth-child(3) {
-   border-radius: 0 8px 0 0;
-}
-
-/* Search styling */
-
-input[type="search"] {
-    float: right;
-    color: #7F7F7F;
-    font: 16px 'Helvetica','Arial',sans-serif;
-    height: 20px;
-    margin: 0px 0px 10px 6px;
-    transition: background 0.3s ease-in-out 0s;
-    width: 300px;
-}
-
-label {
-    font: 16px 'Helvetica','Arial',sans-serif;
-    color: #a9a9a9;
-}
-
-tr:first-child, th:last-child {
-  border-radius: 0 5px 0 0;
-}
-
-/* Message type styling */
-tr td:nth-child(2) {
-    color: white;
-}
-
-tr.debug td:nth-child(2), tr.suppressed td:nth-child(2){
-    background-color: #00B4A3 !important;
-}
-
-tr.info td:nth-child(2) {
-    background-color: #1398B9 !important;
-}
-
-tr.warning td:nth-child(2) {
-    background-color: #EA6928 !important;
-}
-
-tr.critical td:nth-child(2) {
-    background-color: #9A3974 !important;
-}
-
-tr.fatal td:nth-child(2) {
-    background-color: #000000 !important;
 }
